# llm-detox-hw

./: .gitignore  main.py  pyproject.toml  run.md  submission_requirements.md
src/detox_hw/: eval_lib.py  train_dpo.py
submissions/: rm_eval.txt  task1_sft_eval.json  task3_dpo_eval.json  task6_log.txt  task6_merged_ls.txt  task6_ppo_detoxify_eval.json  task7_log.txt  task7_merged_ls.txt  task7_ppo_rm_eval.json  task8_log.txt  task8_merged_ls.txt  task8_ppo_custom_eval.json  verl_setup.txt
tasks/: task2_dpo_loss.py  task4_bt_loss.py  task5_reward_head.py  task8_custom_reward.py
