[project]
name = "llm-detox-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "detoxify>=0.5.2",
    "peft>=0.19.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchao>=0.17.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
